# medium_scraper

./: .gitattributes  .gitignore  .pre-commit-config.yaml  =2.0.0  README.md  dbt_nl_interactors.csv  fct_dbt_interactors.csv  guthub_user_locations.csv  main.py  makefile  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  settings.yml
.github/workflows/: action.yml  ci_pipeline.yml  github_pages.yml  pipeline.yml  pre_commit-auto-update.yml  weekly_run.yml
dbt/: dbt_prod.duckdb  dbt_project.yml  fct_blogs_per_day.parquet  package-lock.yml  packages.yml  profiles.yml
dbt/models/marts/: _medium__models.yml  dim_dbt_discussions.sql  dim_dbt_repos.sql  dim_github_action_usage.sql  dim_medium_authors.sql  fct_blogs_per_day.sql  fct_dbt_interactors.sql  fct_medium_blogs.sql  fct_medium_blogs_per_day.sql
dbt/models/marts/reports/: rpt_github_action_usage.sql
dbt/models/staging/: _staging__models.yml  stg_medium__articles.sql
docs/: jupyter-lite.json
docs/api/contents/: all.json
docs/files/: dim_dbt_discussions.parquet  dim_dbt_repos.parquet  dim_github_action_usage.parquet  dim_medium_authors.parquet  fct_dbt_interactors.parquet  fct_medium_blogs.parquet  fct_medium_blogs_per_day.parquet  jupyter-lite.ipynb
docs/files/reports/: rpt_github_action_usage.parquet
docs/notebooks/: jupyter-lite.ipynb
models/source/: pokeapi.py
output/: medium_blogs.json  medium_blogs_analytics-engineering_199ac6cc-d1fa-4d3f-833b-2ab4035b7815.json  medium_blogs_analytics-engineering_2d9798af-6a06-4867-afad-7d3b0b61fad6.json  medium_blogs_analytics-engineering_36879513-5ec3-48f7-80ae-1f1a0fcf0e72.json  medium_blogs_analytics-engineering_40872cc3-849f-4157-b10f-631b0e797e0b.json  medium_blogs_analytics-engineering_4c059c70-5e31-47c2-8b80-ec83c364c167.json  medium_blogs_analytics-engineering_a25976f5-ccf5-406c-98eb-522f1e9b818a.json  medium_blogs_apache-airflow_199ac6cc-d1fa-4d3f-833b-2ab4035b7815.json  medium_blogs_apache-airflow_36879513-5ec3-48f7-80ae-1f1a0fcf0e72.json  medium_blogs_apache-airflow_40872cc3-849f-4157-b10f-631b0e797e0b.json  medium_blogs_apache-airflow_8bb8ce85-f040-453a-8763-3495320f12d5.json  medium_blogs_apache-airflow_a25976f5-ccf5-406c-98eb-522f1e9b818a.json  medium_blogs_apache-airflow_feeb6cc9-4b24-4a38-9847-63d7dd1500d2.json  medium_blogs_databricks_09ffa23a-7135-43e2-b63c-4e652e6031a1.json  medium_blogs_databricks_0ddc8a66-ab94-46d4-8796-fc5c13352115.json  medium_blogs_databricks_199ac6cc-d1fa-4d3f-833b-2ab4035b7815.json  medium_blogs_databricks_36879513-5ec3-48f7-80ae-1f1a0fcf0e72.json  medium_blogs_databricks_40872cc3-849f-4157-b10f-631b0e797e0b.json  medium_blogs_databricks_a25976f5-ccf5-406c-98eb-522f1e9b818a.json  medium_blogs_dbt_199ac6cc-d1fa-4d3f-833b-2ab4035b7815.json  medium_blogs_dbt_2f76fa09-28f0-4010-b759-01aaeaff0fe8.json  medium_blogs_dbt_36879513-5ec3-48f7-80ae-1f1a0fcf0e72.json  medium_blogs_dbt_40872cc3-849f-4157-b10f-631b0e797e0b.json  medium_blogs_dbt_61a205a8-9f5f-4a85-89db-9d444e1976e1.json  medium_blogs_dbt_9c6d5a66-69f8-470a-abb5-9e16bb895b5c.json  medium_blogs_dbt_a25976f5-ccf5-406c-98eb-522f1e9b818a.json  medium_blogs_dbt_b119cd0c-6eb6-4b69-8ae0-32e1e6a0a2d9.json  medium_blogs_dbt_befb746d-224c-4b0c-96e4-148b1337989d.json
output/bi/: index.html  plotly.html
output/enriched/: nlp_author_location.parquet
output/marts/: dim_dbt_discussions.parquet  dim_dbt_repos.parquet  dim_github_action_usage.parquet  dim_medium_authors.parquet  fct_blogs_per_day.parquet  fct_dbt_interactors.parquet  fct_medium_blogs.parquet  fct_medium_blogs_per_day.parquet
output/marts/reports/: rpt_github_action_usage.parquet
output/staging/medium_authors/: stg_medium_authors__authors.parquet
output/tag=analytics-engineering/extracted_at=1676233825/: extraction_id=59383a1d-6786-45a0-962f-e9848dab6654.json
output/tag=analytics-engineering/extracted_at=1676650623/: extraction_id=44e85d8b-a1f9-4834-ad67-cedd44b4a36c.json
output/tag=analytics-engineering/extracted_at=1677255442/: extraction_id=3cd70c87-c886-4f63-819f-96c07c651423.json
output/tag=analytics-engineering/extracted_at=1679044008/: extraction_id=81dba00f-f757-4ddf-a623-c1d8858a4cc6.json
parser/: pokemon_parser.py
scraper/: medium_web_scraper.py  pokeapi_scraper.py
src/: bi_assembler.py  email_sender.py  main.py  medium_web_scraper.py
src/data_products/: bi_plotly.py  email_weekly_medium_blogs.py  email_weekly_new_dbt_discussions.py  email_weekly_new_dbt_repos.py  github_actions_usage_alert.py  jupyter-lite.ipynb  main.py
src/ingestion/: github_actions.py  github_repo_interactors.py  main.py  medium_web_scraper.py
src/transformation/: author_details.py  main.py  nlp_author_location.py
test/: test_pokeapi_source.py
utils/: utils.py
(+1548 files in other folders)
