[project]
name = "medium_scraper"
version = "0.0.0"
description = "A slightly sarcastic, highly over-engineered GitHub-as-a-Data-Platform Proof-of-Concept."
authors = []
dependencies = [
  "beautifulsoup4",
  "cloudscraper",
  "dbt-core",
  "dbt-duckdb",
  "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl",
  "graphql-query",
  "jupyterlite-core[all]",
  "jupyterlite-pyodide-kernel",
  "papermill",
  "pyarrow",
  "PyGithub",
  "requests",
  "retry",
  "spacy",
  "tabulate"
]
requires-python = ">=3.11,<3.12"

[project.scripts]
data_products = "src.data_products.main:main"
ingestion = "src.ingestion.main:main"
transformation = "src.transformation.main:main"

[tool.black]
line-length = 99
include = '/project$|\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.eggs
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.poetry]
packages = [
    { include = "src" },
]

[tool.poetry.group.dev.dependencies]
duckcli="*"
pre-commit=">3"
pytest = ">=7.1.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
