[metadata]
name = medium-scraper

[options.entry_points]
console_scripts =
    main = src.main:main

[options]
packages = find:
setup_requires = pytest-runner
install_requires =
    beautifulsoup4
    black==22.8.0
    dbt-duckdb
    duckdb
    duckcli
    isort
    mypy
    plotly>=5.13.0
    pre-commit
    pyarrow
    requests
    tabulate
include_package_data = True
tests_require = pytest>=7.1.1

[options.packages.find]
include = src, utils

[options.extras_require]
dev = pytest>=7.1.1
