[metadata]
name = medium-scraper

[options.entry_points]
console_scripts =
    data_products = src.data_products.main:main
    ingestion = src.ingestion.main:main
    transformation = src.transformation.main:main

[options]
packages = find:
setup_requires = pytest-runner
install_requires =
    beautifulsoup4
    black==23.3.0
    dbt-duckdb
    duckdb
    duckcli
    isort
    mypy
    plotly>=5.13.0
    pre-commit
    pyarrow
    requests
    sh>=2.0.0
    tabulate
include_package_data = True
tests_require = pytest>=7.1.1

[options.packages.find]
include = src, utils

[options.extras_require]
dev = pytest>=7.1.1
