[metadata]
name = medium-scraper
description = A slightly sarcastic, highly over-engineered GitHub-as-a-Data-Platform Proof-of-Concept.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options.entry_points]
console_scripts =
    data_products = src.data_products.main:main
    ingestion = src.ingestion.main:main
    transformation = src.transformation.main:main

[options]
packages = find:
setup_requires = pytest-runner
install_requires =
    beautifulsoup4
    black==23.7.0
    dbt-duckdb
    duckdb
    duckcli
    isort
    mypy
    plotly>=5.13.0
    pre-commit
    pyarrow
    PyGithub
    requests
    sh>=2.0.0
    spacy
    tabulate
include_package_data = True
tests_require = pytest>=7.1.1

[options.packages.find]
include = src, utils

[options.extras_require]
dev = pytest>=7.1.1
